docs: expand tasks openapi documentation
